--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Models\Cap\Pedido.cs" />
     <Compile Include="Models\Cap\PesquisaModel.cs" />
     <Compile Include="Models\Cap\RegimeTributario.cs" />
+    <Compile Include="Models\Gen\Indice.cs" />
+    <Compile Include="Models\Gen\IndVariacao.cs" />
     <Compile Include="Models\Requisicao\Material.cs" />
     <Compile Include="Models\Requisicao\MatGrupo.cs" />
     <Compile Include="Models\Cap\Pgto.cs" />
@@ -161,6 +163,8 @@
     <Compile Include="Service\Cap\PedidoService.cs" />
     <Compile Include="Service\Cap\PesquisaService.cs" />
     <Compile Include="Service\Cap\RegimeTributarioService.cs" />
+    <Compile Include="Service\Gen\IndiceService.cs" />
+    <Compile Include="Service\Gen\IndVariacaoService.cs" />
     <Compile Include="Service\Requisicao\MaterialService.cs" />
     <Compile Include="Service\Requisicao\MatGrupoService.cs" />
     <Compile Include="Service\Cap\PgtoService.cs" />
