--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Areas\Erp\Controllers\basico\FeriadoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\GrupoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\IndiceController.cs" />
+    <Compile Include="Areas\Erp\Controllers\basico\IndVariacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\SistemaAreaController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\SistemaParametroController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\SistemaRegraController.cs" />
@@ -447,6 +448,9 @@
     <Content Include="Areas\Erp\Views\Indice\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Indice\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Indice\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\Variacoes.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\Create.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
