--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Areas\Erp\Controllers\TelefoneController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
     <Compile Include="Areas\Erp\Models\FornecedorModel.cs" />
+    <Compile Include="Areas\Erp\Models\IndicesVariacoes.cs" />
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
     <Compile Include="Common\AreaAuthorizeAttribute.cs" />
     <Compile Include="Common\Bind\BindBancoHelper.cs" />
@@ -451,6 +452,7 @@
     <Content Include="Areas\Erp\Views\IndVariacao\Index.cshtml" />
     <Content Include="Areas\Erp\Views\IndVariacao\Variacoes.cshtml" />
     <Content Include="Areas\Erp\Views\IndVariacao\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\VariacoesIndices.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
