--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -219,12 +219,12 @@
     <Compile Include="Areas\Erp\Controllers\TelefoneController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
     <Compile Include="Areas\Erp\Models\FornecedorModel.cs" />
-    <Compile Include="Areas\Erp\Models\IndicesVariacoes.cs" />
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
     <Compile Include="Common\AreaAuthorizeAttribute.cs" />
     <Compile Include="Common\Bind\BindBancoHelper.cs" />
     <Compile Include="Common\Bind\BindContaHelper.cs" />
     <Compile Include="Common\Bind\BindContaTipoHelper.cs" />
+    <Compile Include="Common\Bind\BindDataHelper.cs" />
     <Compile Include="Common\Bind\BindDepartamentoHelper.cs" />
     <Compile Include="Common\Bind\BindEmpresaHelper.cs" />
     <Compile Include="Common\Bind\BindEstadoCivilHelper.cs" />
@@ -453,6 +453,11 @@
     <Content Include="Areas\Erp\Views\IndVariacao\Variacoes.cshtml" />
     <Content Include="Areas\Erp\Views\IndVariacao\Create.cshtml" />
     <Content Include="Areas\Erp\Views\IndVariacao\VariacoesIndices.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\Acumulado.cshtml" />
+    <Content Include="Areas\Erp\Views\IndVariacao\CalculoAcumulado.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
