--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\ContaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ContaFinanceiraController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ContaTipoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\DebitosController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\DepositoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FornecedorController.cs" />
@@ -258,6 +259,9 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
+    <Content Include="Scripts\angular-mocks.js" />
+    <Content Include="Scripts\angular.js" />
+    <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -458,6 +462,9 @@
     <Content Include="Areas\Erp\Views\IndVariacao\Details.cshtml" />
     <Content Include="Areas\Erp\Views\IndVariacao\Acumulado.cshtml" />
     <Content Include="Areas\Erp\Views\IndVariacao\CalculoAcumulado.cshtml" />
+    <Content Include="Scripts\angular.min.js.map" />
+    <Content Include="Areas\Erp\Views\Debitos\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Debitos\Pesquisar.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
