--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -223,6 +223,8 @@
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
     <Compile Include="Common\AreaAuthorizeAttribute.cs" />
     <Compile Include="Common\Bind\BindBancoHelper.cs" />
+    <Compile Include="Common\Bind\BindCentroCustoHelper.cs" />
+    <Compile Include="Common\Bind\BindCentroLucroHelper.cs" />
     <Compile Include="Common\Bind\BindContaHelper.cs" />
     <Compile Include="Common\Bind\BindContaTipoHelper.cs" />
     <Compile Include="Common\Bind\BindDataHelper.cs" />
@@ -232,6 +234,8 @@
     <Compile Include="Common\Bind\BindEstadoHelper.cs" />
     <Compile Include="Common\Bind\BindFornecedorHelper.cs" />
     <Compile Include="Common\Bind\BindFPgtoHelper.cs" />
+    <Compile Include="Common\Bind\BindGrupoCustoHelper.cs" />
+    <Compile Include="Common\Bind\BindGrupoLucroHelper.cs" />
     <Compile Include="Common\Bind\BindIndiceHelper.cs" />
     <Compile Include="Common\Bind\BindMatGrupoHelper.cs" />
     <Compile Include="Common\Bind\BindMoedaHelper.cs" />
@@ -465,6 +469,8 @@
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Areas\Erp\Views\Debitos\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Debitos\Pesquisar.cshtml" />
+    <Content Include="Areas\Erp\Views\CentroCusto\DropDown.cshtml" />
+    <Content Include="Areas\Erp\Views\CentroLucro\DropDown.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
