--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Service\Cap\GrupoCustoServiceTests.cs" />
     <Compile Include="Service\Cap\GrupoFinanceiroServiceTests.cs" />
     <Compile Include="Service\Cap\GrupoLucroServiceTests.cs" />
+    <Compile Include="Service\Cap\LiberacaoServiceTests.cs" />
     <Compile Include="Service\Cap\MaterialServiceTests.cs" />
     <Compile Include="Service\Cap\MatGrupoServiceTests.cs" />
     <Compile Include="Service\Cap\MoedaServiceTests.cs" />
