--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -474,6 +474,8 @@
     <Content Include="Areas\Erp\Views\CentroLucro\DropDown.cshtml" />
     <Content Include="Areas\Erp\Views\Liberacao\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Liberacao\ParcelasALiberar.cshtml" />
+    <Content Include="Areas\Erp\Views\Liberacao\Cancelar.cshtml" />
+    <Content Include="Areas\Erp\Views\Liberacao\ParcelasACancelar.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
