--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\GrupoFinanceiroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoLucroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\LiberacaoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\LiberacaoPagamentoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ParcelaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PedidoController.cs" />
@@ -476,6 +477,10 @@
     <Content Include="Areas\Erp\Views\Liberacao\ParcelasALiberar.cshtml" />
     <Content Include="Areas\Erp\Views\Liberacao\Cancelar.cshtml" />
     <Content Include="Areas\Erp\Views\Liberacao\ParcelasACancelar.cshtml" />
+    <Content Include="Areas\Erp\Views\LiberacaoPagamento\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\LiberacaoPagamento\ParcelasALiberar.cshtml" />
+    <Content Include="Areas\Erp\Views\LiberacaoPagamento\Cancelar.cshtml" />
+    <Content Include="Areas\Erp\Views\LiberacaoPagamento\ParcelasACancelar.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
