--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -481,6 +481,7 @@
     <Content Include="Areas\Erp\Views\LiberacaoPagamento\ParcelasALiberar.cshtml" />
     <Content Include="Areas\Erp\Views\LiberacaoPagamento\Cancelar.cshtml" />
     <Content Include="Areas\Erp\Views\LiberacaoPagamento\ParcelasACancelar.cshtml" />
+    <Content Include="Areas\Erp\Views\Pedido\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
