--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -212,6 +212,8 @@
     <Compile Include="Areas\Erp\Controllers\cap\PgtoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\RegimeTributarioController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\SocioController.cs" />
+    <Compile Include="Areas\Erp\Controllers\ConfiguracoesController.cs" />
+    <Compile Include="Areas\Erp\Controllers\EmailConfigController.cs" />
     <Compile Include="Areas\Erp\Controllers\EmailController.cs" />
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
     <Compile Include="Areas\Erp\Controllers\LoginController.cs" />
@@ -500,6 +502,8 @@
     <Content Include="Content\bootstrap-datepicker.standalone.css.map" />
     <Content Include="Content\bootstrap-datepicker.min.css.map" />
     <Content Include="Content\bootstrap-datepicker.css.map" />
+    <Content Include="Areas\Erp\Views\Configuracoes\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\EmailConfig\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
