--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -507,6 +507,7 @@
     <Content Include="Areas\Erp\Views\EmailConfig\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Usuario\TrocarSenha.cshtml" />
     <Content Include="Areas\Erp\Views\Usuario\RedefinirSenha.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\CreateIntoModal.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
