--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -508,6 +508,8 @@
     <Content Include="Areas\Erp\Views\Usuario\TrocarSenha.cshtml" />
     <Content Include="Areas\Erp\Views\Usuario\RedefinirSenha.cshtml" />
     <Content Include="Areas\Erp\Views\Deposito\CreateIntoModal.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\EditIntoModal.cshtml" />
+    <Content Include="Areas\Erp\Views\Deposito\InfoIntoModal.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
