--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\ContaFinanceiraController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ContaTipoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\DebitosController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\DepartamentoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\DepositoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FornecedorController.cs" />
@@ -510,6 +511,11 @@
     <Content Include="Areas\Erp\Views\Deposito\CreateIntoModal.cshtml" />
     <Content Include="Areas\Erp\Views\Deposito\EditIntoModal.cshtml" />
     <Content Include="Areas\Erp\Views\Deposito\InfoIntoModal.cshtml" />
+    <Content Include="Areas\Erp\Views\Departamento\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Departamento\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Departamento\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Departamento\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Departamento\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
