--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -115,7 +115,9 @@
     <Compile Include="Models\Cap\GrupoCusto.cs" />
     <Compile Include="Models\Cap\GrupoFinanceiro.cs" />
     <Compile Include="Models\Cap\GrupoLucro.cs" />
+    <Compile Include="Models\Cap\Logistica.cs" />
     <Compile Include="Models\Cap\Moeda.cs" />
+    <Compile Include="Models\Cap\Motorista.cs" />
     <Compile Include="Models\Cap\Parcela.cs" />
     <Compile Include="Models\Cap\ParcelaAdicionaModel.cs" />
     <Compile Include="Models\Cap\Pedido.cs" />
@@ -165,7 +167,9 @@
     <Compile Include="Service\Cap\GrupoLucroService.cs" />
     <Compile Include="Service\Cap\LiberacaoPagamentoService.cs" />
     <Compile Include="Service\Cap\LiberacaoService.cs" />
+    <Compile Include="Service\Cap\LogisticaService.cs" />
     <Compile Include="Service\Cap\MoedaService.cs" />
+    <Compile Include="Service\Cap\MotoristaService.cs" />
     <Compile Include="Service\Cap\ParcelaService.cs" />
     <Compile Include="Service\Cap\PedidoService.cs" />
     <Compile Include="Service\Cap\PesquisaService.cs" />
