--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\LiberacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\LiberacaoPagamentoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\MotoristaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ParcelaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PedidoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\PesquisaController.cs" />
@@ -252,6 +253,7 @@
     <Compile Include="Common\Bind\BindSituacaoPagamentoHelper.cs" />
     <Compile Include="Common\Bind\BindTipoContaHelper.cs" />
     <Compile Include="Common\Bind\BindUnidadeHelper.cs" />
+    <Compile Include="Common\Bind\BindUsuarioHelper.cs" />
     <Compile Include="Common\EnumDescription.cs" />
     <Compile Include="Common\Identification.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -516,6 +518,11 @@
     <Content Include="Areas\Erp\Views\Departamento\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Departamento\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Departamento\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Motorista\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Motorista\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Motorista\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Motorista\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Motorista\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
