--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\GrupoLucroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\LiberacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\LiberacaoPagamentoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\LogisticaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MoedaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\MotoristaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ParcelaController.cs" />
@@ -245,6 +246,7 @@
     <Compile Include="Common\Bind\BindIndiceHelper.cs" />
     <Compile Include="Common\Bind\BindMatGrupoHelper.cs" />
     <Compile Include="Common\Bind\BindMoedaHelper.cs" />
+    <Compile Include="Common\Bind\BindMotoristaHelper.cs" />
     <Compile Include="Common\Bind\BindPeriodicidadeHelper.cs" />
     <Compile Include="Common\Bind\BindPgtoHelper.cs" />
     <Compile Include="Common\Bind\BindRegimeTributarioHelper.cs" />
@@ -523,6 +525,8 @@
     <Content Include="Areas\Erp\Views\Motorista\Create.cshtml" />
     <Content Include="Areas\Erp\Views\Motorista\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Motorista\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\GetLogisticaDia.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
