--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -527,6 +527,11 @@
     <Content Include="Areas\Erp\Views\Motorista\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Logistica\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Logistica\GetLogisticaDia.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\ConcluirServico.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
