--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -532,6 +532,7 @@
     <Content Include="Areas\Erp\Views\Logistica\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Logistica\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Logistica\ConcluirServico.cshtml" />
+    <Content Include="Areas\Erp\Views\Logistica\CancelarConclusao.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
