--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -223,6 +223,8 @@
     <Compile Include="Areas\Erp\Controllers\MenuController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\MaterialController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\MatGrupoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\ReqMaterialController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\RequisicaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\UnidadeController.cs" />
     <Compile Include="Areas\Erp\Controllers\TelefoneController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
@@ -533,6 +535,9 @@
     <Content Include="Areas\Erp\Views\Logistica\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Logistica\ConcluirServico.cshtml" />
     <Content Include="Areas\Erp\Views\Logistica\CancelarConclusao.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\Nova.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\Editar.cshtml" />
+    <Content Include="Areas\Erp\Views\ReqMaterial\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
