--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Common\Bind\BindGrupoCustoHelper.cs" />
     <Compile Include="Common\Bind\BindGrupoLucroHelper.cs" />
     <Compile Include="Common\Bind\BindIndiceHelper.cs" />
+    <Compile Include="Common\Bind\BindMaterialHelper.cs" />
     <Compile Include="Common\Bind\BindMatGrupoHelper.cs" />
     <Compile Include="Common\Bind\BindMoedaHelper.cs" />
     <Compile Include="Common\Bind\BindMotoristaHelper.cs" />
@@ -538,6 +539,8 @@
     <Content Include="Areas\Erp\Views\Requisicao\Nova.cshtml" />
     <Content Include="Areas\Erp\Views\Requisicao\Editar.cshtml" />
     <Content Include="Areas\Erp\Views\ReqMaterial\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\ReqMaterial\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\ReqMaterial\Details.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
