--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Areas\Erp\Controllers\requisicao\UnidadeController.cs" />
     <Compile Include="Areas\Erp\Controllers\TelefoneController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
+    <Compile Include="Areas\Erp\ModalInfoController.cs" />
     <Compile Include="Areas\Erp\Models\FornecedorModel.cs" />
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
     <Compile Include="Common\AreaAuthorizeAttribute.cs" />
@@ -541,6 +542,11 @@
     <Content Include="Areas\Erp\Views\ReqMaterial\Index.cshtml" />
     <Content Include="Areas\Erp\Views\ReqMaterial\Create.cshtml" />
     <Content Include="Areas\Erp\Views\ReqMaterial\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\ReqMaterial\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\ReqMaterial\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\ModalInfo\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\Send.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
