--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -221,6 +221,8 @@
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
     <Compile Include="Areas\Erp\Controllers\LoginController.cs" />
     <Compile Include="Areas\Erp\Controllers\MenuController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\CotarComController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\GrupoCotacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\MaterialController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\MatGrupoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\ReqMaterialController.cs" />
@@ -237,6 +239,7 @@
     <Compile Include="Common\Bind\BindCentroLucroHelper.cs" />
     <Compile Include="Common\Bind\BindContaHelper.cs" />
     <Compile Include="Common\Bind\BindContaTipoHelper.cs" />
+    <Compile Include="Common\Bind\BindCotGrupoHelper.cs" />
     <Compile Include="Common\Bind\BindDataHelper.cs" />
     <Compile Include="Common\Bind\BindDepartamentoHelper.cs" />
     <Compile Include="Common\Bind\BindEmpresaHelper.cs" />
@@ -545,8 +548,15 @@
     <Content Include="Areas\Erp\Views\ReqMaterial\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\ReqMaterial\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\ModalInfo\Index.cshtml" />
-    <Content Include="Areas\Erp\Views\Requisicao\Send.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\FinishEdit.cshtml" />
     <Content Include="Areas\Erp\Views\Requisicao\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCotacao\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCotacao\Details.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCotacao\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCotacao\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\GrupoCotacao\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\CotarCom\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\CotarCom\Fornecedores.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
