--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -564,6 +564,8 @@
     <Content Include="Areas\Erp\Views\Requisicao\Send.cshtml" />
     <Content Include="Areas\Erp\Views\CotarCom\CotarCom.cshtml" />
     <Content Include="Areas\Erp\Views\CotarCom\GetSelecaoFornecedores.cshtml" />
+    <Content Include="Areas\Erp\Views\CotarCom\EnviarPorEmail.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\Imprimir.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
