--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Service\Admin\SistemaAreaServiceTests.cs" />
+    <Compile Include="Service\Admin\SistemaParametroServiceTests.cs" />
     <Compile Include="Service\Admin\SistemaRegraServiceTests.cs" />
     <Compile Include="Service\Admin\SistemaTelaServiceTests.cs" />
     <Compile Include="Service\Cap\BancoServiceTests.cs" />
