Cotacao de precos - fornecedor

--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Abstract\Gen\IIndVariacaoCalculo.cs" />
     <Compile Include="Abstract\IBaseService.cs" />
     <Compile Include="Abstract\ILogistica.cs" />
+    <Compile Include="Abstract\Req\ICotacaoService.cs" />
     <Compile Include="Abstract\Req\ICotadoCom.cs" />
     <Compile Include="Common\NotEqualAttribute.cs" />
     <Compile Include="Models\Admin\Estado.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="Models\Email\EmailConfig.cs" />
     <Compile Include="Models\Gen\Indice.cs" />
     <Compile Include="Models\Gen\IndVariacao.cs" />
+    <Compile Include="Models\Requisicao\CotacaoFornecedor.cs" />
     <Compile Include="Models\Requisicao\CotCotacao.cs" />
     <Compile Include="Models\Requisicao\CotCotadoCom.cs" />
     <Compile Include="Models\Requisicao\CotDadosCotacao.cs" />
@@ -184,6 +186,7 @@
     <Compile Include="Service\Email\EmailConfigService.cs" />
     <Compile Include="Service\Gen\IndiceService.cs" />
     <Compile Include="Service\Gen\IndVariacaoService.cs" />
+    <Compile Include="Service\Requisicao\CotacaoService.cs" />
     <Compile Include="Service\Requisicao\CotCotacaoService.cs" />
     <Compile Include="Service\Requisicao\CotCotadoComService.cs" />
     <Compile Include="Service\Requisicao\CotDadosCotacaoService.cs" />
