--- a/Cap.Web.Tests/Cap.Web.Tests.csproj
+++ b/Cap.Web.Tests/Cap.Web.Tests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Cap\PgtoUnitTest.cs" />
     <Compile Include="Cap\FPgtoUnitTest.cs" />
     <Compile Include="Cap\BancoUnitTest.cs" />
+    <Compile Include="Models\Requisicao\ResumoCotacaoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Service\Admin\SistemaAreaServiceTests.cs" />
