--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Areas\Erp\Controllers\MenuController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotacaoFornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotarComController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\CotDadosCotacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\GrupoCotacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\MaterialController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\MatGrupoController.cs" />
@@ -590,6 +591,8 @@
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\Indicacao.cshtml" />
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\Detalhamento.cshtml" />
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItem.cshtml" />
+    <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItemDados.cshtml" />
+    <Content Include="Areas\Erp\Views\CotDadosCotacao\Edit.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
