--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Areas\Erp\Controllers\MenuController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotacaoFornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotarComController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\CotCotacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotDadosCotacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\GrupoCotacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\MaterialController.cs" />
@@ -593,6 +594,7 @@
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItem.cshtml" />
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItemDados.cshtml" />
     <Content Include="Areas\Erp\Views\CotDadosCotacao\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItemPreco.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
@@ -610,6 +612,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\js\common.js" />
+    <Content Include="Scripts\js\show-message.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.ar.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.az.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.bg.min.js" />
@@ -699,6 +702,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Erp\Views\CotCotacao\" />
     <Folder Include="Areas\Erp\Views\Menu\" />
     <Folder Include="Models\" />
   </ItemGroup>
