--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -595,6 +595,8 @@
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItemDados.cshtml" />
     <Content Include="Areas\Erp\Views\CotDadosCotacao\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItemPreco.cshtml" />
+    <Content Include="Areas\Erp\Views\CotCotacao\Edit.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\Logistica.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
@@ -612,6 +614,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\js\common.js" />
+    <Content Include="Scripts\js\cotacao-atualizar-detalhamento.js" />
     <Content Include="Scripts\js\show-message.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.ar.min.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.az.min.js" />
@@ -702,7 +705,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Erp\Views\CotCotacao\" />
     <Folder Include="Areas\Erp\Views\Menu\" />
     <Folder Include="Models\" />
   </ItemGroup>
