--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Areas\Erp\Controllers\requisicao\ReqMaterialController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\RequisicaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\UnidadeController.cs" />
+    <Compile Include="Areas\Erp\Controllers\SistemaConfigController.cs" />
     <Compile Include="Areas\Erp\Controllers\TelefoneController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
     <Compile Include="Areas\Erp\ModalInfoController.cs" />
@@ -597,6 +598,8 @@
     <Content Include="Areas\Erp\Views\CotacaoFornecedor\CotacaoItemPreco.cshtml" />
     <Content Include="Areas\Erp\Views\CotCotacao\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Requisicao\Logistica.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\Compradas.cshtml" />
+    <Content Include="Areas\Erp\Views\SistemaConfig\Index.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
