--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Models\Requisicao\MatGrupo.cs" />
     <Compile Include="Models\Cap\Pgto.cs" />
     <Compile Include="Models\Cap\Socio.cs" />
+    <Compile Include="Models\Requisicao\ReqAutorizante.cs" />
     <Compile Include="Models\Requisicao\ReqMaterial.cs" />
     <Compile Include="Models\Requisicao\ReqRequisicao.cs" />
     <Compile Include="Models\Requisicao\ResumoCotacao.cs" />
@@ -202,6 +203,7 @@
     <Compile Include="Service\Requisicao\MatGrupoService.cs" />
     <Compile Include="Service\Cap\PgtoService.cs" />
     <Compile Include="Service\Cap\SocioService.cs" />
+    <Compile Include="Service\Requisicao\ReqAutorizanteService.cs" />
     <Compile Include="Service\Requisicao\ReqMaterialService.cs" />
     <Compile Include="Service\Requisicao\ReqRequisicaoService.cs" />
     <Compile Include="Service\Requisicao\UnidadeService.cs" />
