--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -606,6 +606,8 @@
     <Content Include="Areas\Erp\Views\ReqAutorizante\Details.cshtml" />
     <Content Include="Areas\Erp\Views\ReqAutorizante\Create.cshtml" />
     <Content Include="Areas\Erp\Views\ReqAutorizante\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\EntregasPrevistas.cshtml" />
+    <Content Include="Areas\Erp\Views\Requisicao\ConfirmarEntrega.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
