--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Abstract\ILogistica.cs" />
     <Compile Include="Abstract\Req\ICotacaoService.cs" />
     <Compile Include="Abstract\Req\ICotadoCom.cs" />
+    <Compile Include="Abstract\Req\IReqComprar.cs" />
     <Compile Include="Abstract\Req\IRequisicao.cs" />
     <Compile Include="Abstract\Req\IResumoCotacao.cs" />
     <Compile Include="Common\NotEqualAttribute.cs" />
@@ -144,6 +145,7 @@
     <Compile Include="Models\Cap\Pgto.cs" />
     <Compile Include="Models\Cap\Socio.cs" />
     <Compile Include="Models\Requisicao\ReqAutorizante.cs" />
+    <Compile Include="Models\Requisicao\ReqComprar.cs" />
     <Compile Include="Models\Requisicao\ReqMaterial.cs" />
     <Compile Include="Models\Requisicao\ReqRequisicao.cs" />
     <Compile Include="Models\Requisicao\ResumoCotacao.cs" />
@@ -204,6 +206,7 @@
     <Compile Include="Service\Cap\PgtoService.cs" />
     <Compile Include="Service\Cap\SocioService.cs" />
     <Compile Include="Service\Requisicao\ReqAutorizanteService.cs" />
+    <Compile Include="Service\Requisicao\ReqComprarService.cs" />
     <Compile Include="Service\Requisicao\ReqMaterialService.cs" />
     <Compile Include="Service\Requisicao\ReqRequisicaoService.cs" />
     <Compile Include="Service\Requisicao\UnidadeService.cs" />
