--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Areas\Erp\Controllers\HomeController.cs" />
     <Compile Include="Areas\Erp\Controllers\LoginController.cs" />
     <Compile Include="Areas\Erp\Controllers\MenuController.cs" />
+    <Compile Include="Areas\Erp\Controllers\requisicao\CotacaoCompraController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotacaoFornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotarComController.cs" />
     <Compile Include="Areas\Erp\Controllers\requisicao\CotCotacaoController.cs" />
@@ -608,6 +609,7 @@
     <Content Include="Areas\Erp\Views\ReqAutorizante\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Requisicao\EntregasPrevistas.cshtml" />
     <Content Include="Areas\Erp\Views\Requisicao\ConfirmarEntrega.cshtml" />
+    <Content Include="Areas\Erp\Views\CotacaoCompra\Index.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
@@ -716,6 +718,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Erp\Views\Cotacao\" />
     <Folder Include="Areas\Erp\Views\Menu\" />
     <Folder Include="Models\" />
   </ItemGroup>
