--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -610,6 +610,7 @@
     <Content Include="Areas\Erp\Views\Requisicao\EntregasPrevistas.cshtml" />
     <Content Include="Areas\Erp\Views\Requisicao\ConfirmarEntrega.cshtml" />
     <Content Include="Areas\Erp\Views\CotacaoCompra\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\CotacaoCompra\GetCotacaoFornecedor.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
