--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -611,6 +611,7 @@
     <Content Include="Areas\Erp\Views\Requisicao\ConfirmarEntrega.cshtml" />
     <Content Include="Areas\Erp\Views\CotacaoCompra\Index.cshtml" />
     <Content Include="Areas\Erp\Views\CotacaoCompra\GetCotacaoFornecedor.cshtml" />
+    <Content Include="Areas\Erp\Views\CotacaoFornecedor\Excluir.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
