--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -176,6 +176,7 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Erp\Controllers\AgendaController.cs" />
+    <Compile Include="Areas\Erp\Controllers\ArquivoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\AcessoController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\EstadoCivilController.cs" />
     <Compile Include="Areas\Erp\Controllers\basico\EstadoController.cs" />
@@ -616,6 +617,9 @@
     <Content Include="Areas\Erp\Views\Boleto\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Boleto\GetParcelas.cshtml" />
     <Content Include="Areas\Erp\Views\Boleto\GetParcela.cshtml" />
+    <Content Include="Areas\Erp\Views\Arquivo\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Arquivo\Create.cshtml" />
+    <Content Include="Areas\Erp\Views\Arquivo\Pesquisar.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
