--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\EmpresaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FornecedorController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\FPgtoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\GraficoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoCustoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoFinanceiroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoLucroController.cs" />
@@ -623,6 +624,8 @@
     <Content Include="Areas\Erp\Views\Arquivo\Details.cshtml" />
     <Content Include="Areas\Erp\Views\Arquivo\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Arquivo\Delete.cshtml" />
+    <Content Include="Areas\Erp\Views\Grafico\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Grafico\GetGrafico.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
