--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -629,6 +629,7 @@
     <Content Include="Areas\Erp\Views\Grafico\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Caixa\Index.cshtml" />
     <Content Include="Areas\Erp\Views\InfoCaixa\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Caixa\GetParcelas.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
